Add comprehensive test suite with mock server
- Moved tests to organized tests/ directory
- Created mock MCP server for self-contained testing
- Added comprehensive test suite covering all features
- Tests no longer require external server to be running
- Added npm test command for easy test execution
- Test coverage includes: connection, messages, queuing,
  reconnection, error handling, auth, and environment variables

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "mcp2websocket": "./mcp2websocket.js"
   },
   "scripts": {
-    "start": "node mcp2websocket.js"
+    "start": "node mcp2websocket.js",
+    "test": "node tests/index.js"
   },
   "keywords": [
     "mcp",
