--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node mcp2websocket.js",
-    "test": "node tests/index.js"
+    "test": "mocha tests/**/*.test.js"
   },
   "keywords": [
     "mcp",
@@ -24,5 +24,9 @@
   },
   "engines": {
     "node": ">=14.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.5.0",
+    "mocha": "^11.7.1"
   }
 }
