--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bridge for connecting MCP stdio clients to WebSocket servers",
   "main": "mcp2websocket.js",
   "bin": {
-    "mcp2websocket": "./mcp2websocket.js"
+    "mcp2websocket": "mcp2websocket.js"
   },
   "scripts": {
     "start": "node mcp2websocket.js",
